Add Valorant API look up

--- a/nodejslogin/html_pages/aboutus.html
+++ b/nodejslogin/html_pages/aboutus.html
@@ -111,7 +111,7 @@
 			</article>
 			<article>
 				<figure>
-					<img src="https://scontent.fbkk23-1.fna.fbcdn.net/v/t1.6435-9/76643668_2487958281324991_4673167195369373696_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_eui2=AeHK4vDTg7-JLNedQP8LlKXviW5JZJB-uyOJbklkkH67IwfvVSEqDvhQje7tuZLjfCjaN4dC50WeIMkIbZCcwdGK&_nc_ohc=riexl-VwiD8AX_YRboj&_nc_ht=scontent.fbkk23-1.fna&oh=00_AT_U7UWOzSOLfs5EmXkZggJhvZbE9WMN7fYx1LdezRruJw&oe=62046D8C"
+					<img src="https://cdn.discordapp.com/attachments/874612979549736983/959127458899189821/76643668_2487958281324991_4673167195369373696_n_1.jpg"
 						alt="Jirayu Klinudom" width="100%" />
 					<figcaption>Jirayu Klinudom</figcaption>
 				</figure>	
