--- a/nodejslogin/html_pages/downloadpage.html
+++ b/nodejslogin/html_pages/downloadpage.html
@@ -53,43 +53,43 @@
 				<h2><strong>All Games<span></span></strong></h2>
 				<div class="cards">
 					<figure class="card">
-						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931125708766478346/minecraft-dungeons_1220x2160_xtrafondos.com.jpg" />
+						<img src="https://www.xtrafondos.com/wallpapers/vertical/minecraft-dungeons-8331.jpg" alt="Minecraft Dungeon" />
 						<figcaption>Minecraft Dungeon</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931165954224848956/WallpaperDog-17104041.jpg" />
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931165954224848956/WallpaperDog-17104041.jpg" alt="Minecraft" />
 						<figcaption>Minecraft</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_9134.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_9134.jpg" alt="HAND"/>
 						<figcaption>Have a Nice Death</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_6770.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_6770.jpg" alt="HALO"/>
 						<figcaption>Halo Infinite</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5888.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5888.jpg" alt="DOTA2"/>
 						<figcaption>Dota 2</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931173316893474867/LOL.png" />
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931173316893474867/LOL.png" alt="LOL" />
 						<figcaption>League of Legends</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5549.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_5549.jpg" alt="Valorant" />
 						<figcaption>Valorant</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_8506.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_8506.jpg" alt="PUBG"/>
 						<figcaption>PUBG</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://www.xtrafondos.com/thumbs/vertical/1_3197.jpg" />
+						<img src="https://www.xtrafondos.com/thumbs/vertical/1_3197.jpg" alt="CSGO"/>
 						<figcaption>CSGO</figcaption>
 					</figure>
 					<figure class="card">
-						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931171636235886662/2505746.png" />
+						<img src="https://cdn.discordapp.com/attachments/874612979549736983/931171636235886662/2505746.png" alt="GENSHIN IMPACT"/>
 						<figcaption>Genshin Impact</figcaption>
 					</figure>
 				</div>
@@ -123,4 +123,7 @@
 		</footer>
 	</div><!-- .wrapper -->
 	</body>
+	<script>
+		
+	</script>
 </html>
