Last Login to Account Level at API lookup

--- a/nodejslogin/html_pages/homepage.html
+++ b/nodejslogin/html_pages/homepage.html
@@ -148,7 +148,7 @@
 						let results = data.data;
 						// for (let index = 0; index < results.length; index++) {
 						document.querySelector("#test").innerHTML += "<h5> Rank: "+ results[0].currenttierpatched+ "</h5>";
-						document.querySelector("#test").innerHTML += "<h5> Last Login: "+ player.last_update+ "</h5>";
+						document.querySelector("#test").innerHTML += "<h5> Level: "+ player.account_level+ "</h5>";
 						document.querySelector("#test").innerHTML += "<img id=\"tagimg\" src=" + player.card.small + ">";
 						// }
 					})
